fix overflow issue

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -22,10 +22,13 @@
     }
 }
 
+.overflow {
+    overflow: hidden;
+}
+
 .portfolio {
     @extend %island--large;
     margin: 5rem 0;
-    overflow: hidden;
     &::after {
         content: "";
         height: 110%;
